--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.7",
